feat：前置机过白

--- a/后端方向/部署相关/站点保护/3.前置机过白配置.md
+++ b/后端方向/部署相关/站点保护/3.前置机过白配置.md
@@ -35,15 +35,13 @@ iptables -I INPUT -p udp --dport $portRange -j ACCEPT
 
 ## 中转机过白
 
-> 开机自动运行一次，ipt-init.sh：
-
-启用保护：
+### 开启保护
 
 ```shell
 #!/bin/bash
 
 # 前置机地址数组
-sServers=("1.1.1.1")
+sServers=("114.114.114.114")
 # 中转端口范围
 portRange=50000:59999
 
@@ -56,9 +54,6 @@ done
 # 默认策略丢弃
 iptables -A FORWARD -j DROP
 
-# 屏蔽ICMP request
-iptables -I INPUT -p icmp --icmp-type echo-request -j DROP
-
 # 创建白名单链
 iptables -N whitelist
 
@@ -66,23 +61,25 @@ iptables -N whitelist
 for server in "${sServers[@]}"; do
   iptables -A whitelist -s "$server" -j RETURN
 done
+
+# 添加白名单默认丢弃规则
 iptables -A whitelist -p tcp -j DROP
 iptables -A whitelist -p udp -j DROP
+iptables -A whitelist -p icmp --icmp-type echo-request -j DROP
 
 # 挂载白名单到INPUT链
 iptables -I INPUT -p tcp --dport $portRange -m state --state NEW -j whitelist
 iptables -I INPUT -p udp --dport $portRange -m state --state NEW -j whitelist
-~
-
+iptables -I INPUT -p icmp --icmp-type echo-request -j whitelist
 ```
 
-停用保护：
+### 关闭保护
 
 ```shell
 #!/bin/bash
 
 # 前置机地址数组
-sServers=("1.1.1.1")
+sServers=("114.114.114.114")
 # 中转端口范围
 portRange=50000:59999
 
@@ -95,17 +92,17 @@ done
 # 默认FORWARD策略丢弃
 iptables -D FORWARD -j DROP
 
-# 屏蔽ICMP request
-iptables -D INPUT -p icmp --icmp-type echo-request -j DROP
-
 # 挂载白名单到INPUT链
 iptables -D INPUT -p tcp --dport $portRange -m state --state NEW -j whitelist
 iptables -D INPUT -p udp --dport $portRange -m state --state NEW -j whitelist
+iptables -D INPUT -p icmp --icmp-type echo-request -j whitelist
 
 # 删除白名单链
 iptables -F whitelist
 iptables -X whitelist
 ```
+
+## 非标准定时任务配置
 
 > cron 定时任务，没 5 秒运行一次，ipt-disable-forward.sh：
 
