feat：增加初始化脚本头

--- a/后端方向/Linux/Debian/1.Debian11增加开机自启动脚本.md
+++ b/后端方向/Linux/Debian/1.Debian11增加开机自启动脚本.md
@@ -24,6 +24,7 @@ sudo systemctl status rc-local.service  # 查看状态
 ### 脚本
 
 ```bash
+#!/bin/bash
 echo "[Install]" >> /lib/systemd/system/rc-local.service
 echo "WantedBy=multi-user.target"  >> /lib/systemd/system/rc-local.service
 
