--- a/容器技术/Docker/10.Docker[设置镜像加速].md
+++ b/容器技术/Docker/10.Docker[设置镜像加速].md
@@ -2,7 +2,7 @@
 
 ### 创建加速镜像仓库
 
-创建 Docker 镜像加速仓库，记得开启仓库的 HTTP 自定义端口，Docker 不支持使用 URL 配置自定义仓库，只能使用根路径，所以需要配置别名端口映射，开启匿名访问：
+创建 Docker 镜像加速仓库，记得开启仓库的 HTTP 自定义端口，Docker 不支持使用 URL 配置自定义仓库，只能使用根路径，所以需要配置别名端口映射，开启匿名访问，远端仓库地址填写：`https://registry-1.docker.io/`，配置如下：
 
 <img src="./img/DBFF11A0-6B7F-4e64-A9F0-DA191BCEE037.png" />
 
