feat：加密通讯链路

--- a/后端方向/部署相关/组网技术/3.Wireguard使用UDP加密隧道.md
+++ b/后端方向/部署相关/组网技术/3.Wireguard使用UDP加密隧道.md
@@ -3,7 +3,7 @@
 ### 服务端指令
 
 ```shell
-gost -L forward+mtls://:11820 -F forward+udp://127.0.0.1:51820
+./gost -L tcp+mtls://:11820?udp=true -F forward+udp://127.0.0.1:51820
 ```
 
 监听器正常配置即可，推荐使用带有多路复用的 tls，不使用 relay，因为默认 relay 带有等待，可能会造成一些问题
@@ -13,7 +13,7 @@ gost -L forward+mtls://:11820 -F forward+udp://127.0.0.1:51820
 ### 客户端指令
 
 ```shell
-gost -L udp://:51820?keepAlive=true -F forward+mtls://1.1.1.1:11820
+gost -L udp://:51820?keepAlive=true -F tcp+mtls://1.1.1.1:11820?udp=true
 ```
 
 重点：客户端指令监听器中的：`keepAlive`必须开启，否则会造成 wg 通讯链路无法保持，其他正常配置
