feat：Gost-UDP隧道

--- a/后端方向/部署相关/组网技术/3.Wireguard使用UDP加密隧道.md
+++ b/后端方向/部署相关/组网技术/3.Wireguard使用UDP加密隧道.md
@@ -19,3 +19,23 @@ gost -L udp://:51820?keepAlive=true -F tcp+mtls://1.1.1.1:11820?udp=true
 重点：客户端指令监听器中的：`keepAlive`必须开启，否则会造成 wg 通讯链路无法保持，其他正常配置
 
 至此，配置完毕，可以正常使用 WG 通讯链路了，对外表现为 Gost 的 tls 通讯链路，对内表现为 WG 的 VPN 通讯链路
+
+## 正确姿势
+
+前面的方式属于技术攻坚，下面的方式才是正确姿势，兼顾了灵活性与安全性：
+
+服务侧：
+
+```shell
+gost -L relay+mwss://user:pass@:1111
+```
+
+客户端：
+
+```shell
+gost.exe -L udp://:51820/1.1.1.1:51820?keepAlive=true -F relay+mwss://user:pass@:1111
+```
+
+这种方式，服务端侧，仅提供中转服务，具体目标由客户端自行决定，灵活性比较好；并且增加了连接口令，避免被刷流。
+
+Tips:某些版本的 GOST 有 BUG，如果遇到配置正确，转发 UDP 异常，尝试升级到最新版本。
