--- a/后端方向/部署相关/组网技术/3.Wireguard使用UDP加密隧道.md
+++ b/后端方向/部署相关/组网技术/3.Wireguard使用UDP加密隧道.md
@@ -39,3 +39,7 @@ gost.exe -L udp://:51820/1.1.1.1:51820?keepAlive=true -F relay+mwss://user:pass@
 这种方式，服务端侧，仅提供中转服务，具体目标由客户端自行决定，灵活性比较好；并且增加了连接口令，避免被刷流。
 
 Tips:某些版本的 GOST 有 BUG，如果遇到配置正确，转发 UDP 异常，尝试升级到最新版本。
+
+## 重要说明
+
+Gost 低版本 UDP 搭配 TLS 通道有 BUG，如果感觉配置没问题的话，可以先升级到最新版本试试。
