feat：easymock直接返回基础数据

--- a/前端方向/前端基础/Easymock/1.响应式数据.md
+++ b/前端方向/前端基础/Easymock/1.响应式数据.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [响应式数据](#%E5%93%8D%E5%BA%94%E5%BC%8F%E6%95%B0%E6%8D%AE)
   - [典型样例（直接响应数组+自定义 header）](#%E5%85%B8%E5%9E%8B%E6%A0%B7%E4%BE%8B%E7%9B%B4%E6%8E%A5%E5%93%8D%E5%BA%94%E6%95%B0%E7%BB%84%E8%87%AA%E5%AE%9A%E4%B9%89-header)
@@ -45,4 +46,17 @@
 ];
 ```
 
-*Tips:easy-mock 实际使用了mockjs作为数据生成的实际实现，可以参考 [mockjs](https://github.com/nuysoft/Mock) 源码 以及 [easy-mock](https://github.com/easy-mock/easy-mock) 源码进行使用，灵活度非常高，文档上的例子远远不足以支撑复杂的自定义数据生成*
+_Tips:easy-mock 实际使用了 mockjs 作为数据生成的实际实现，可以参考 [mockjs](https://github.com/nuysoft/Mock) 源码 以及 [easy-mock](https://github.com/easy-mock/easy-mock) 源码进行使用，灵活度非常高，文档上的例子远远不足以支撑复杂的自定义数据生成_
+
+## 直接返回基础类型数据
+
+```js
+{
+  "_res": {
+    "status": 200,
+    "data": 2,
+  }
+}
+```
+
+将直接返回`2`，并且状态码为`200`，data 的位置可以使用函数进行返回，与前面的响应函函数用法一样
