feat：Debian系统添加自启动

--- a/后端方向/Linux/Debian/1.Debian11增加开机自启动脚本.md
+++ b/后端方向/Linux/Debian/1.Debian11增加开机自启动脚本.md
@@ -40,3 +40,7 @@ systemctl start rc-local.service
 
 echo "处理完成，请将自启动脚本添加至：/etc/rc.local 中，并赋予执行权限"
 ```
+
+## 对于 Debian12 系统
+
+经过验证，此方法对于 Debian12 系统仍然奏效，且配置完全一致，无需做任何修改。
