feat：模块定义与导出

--- a/后端方向/Rust/08.包与模块.md
+++ b/后端方向/Rust/08.包与模块.md
@@ -188,3 +188,18 @@ mod system_conf {
     }
 }
 ```
+
+## 关于模块定义的说明
+
+多文件模块，模块按照文件进行组织比较好，如果在文件内继续定义模块，在引入时会出现比较深的引用路径，如果想要获取比较短的路径，则只能在模块级进行重导出，也不是很方便。
+
+模块定义支持嵌套定义，但是需要注意模块的可见性，文件（模块）内的可见性不代表模块的可见性，模块是否可见需要在`mod.rs`中进行声明。
+
+如果模块的可见性不需要被外部访问，则可以使用`pub(crate)`来声明模块的可见性为当前包内可见，如果编写的模块仅用于当前项目，且希望获得一个扁平化的引用路径，则推荐使用这个声明，但是会使得引用结构脱离文件结构，需要审慎。
+
+`mod.rs`文件必须对模块进行声明，但是可以不对模块进行公开，如果希望外部能够访问，则必须在`mod.rs`文件中进行公开。
+
+```rust
+// mod.rs
+pub mod module_name;
+```
