--- a/后端方向/Rust/09.通用集合类型.md
+++ b/后端方向/Rust/09.通用集合类型.md
@@ -90,3 +90,20 @@ pub fn run() {
     }
 }
 ```
+
+## 安全访问数组元素
+
+通常来说访问数组成员我们使用下标直接访问：`arr[index]`，但是当数组越界时，会引发 panic 异常，为了避免这种情况，我们可以使用 `get` 方法来访问数组成员：
+
+```rust
+pub fn run() {
+    let arr = vec![1, 2, 3, 4, 5];
+    let index = 100;
+
+    if let Some(value) = arr.get(index) {
+        println!("value: {:?}", value);
+    } else {
+        println!("index out of bounds, index: {}", index);
+    }
+}
+```
