--- a/后端方向/Rust/12.错误处理.md
+++ b/后端方向/Rust/12.错误处理.md
@@ -72,3 +72,24 @@ pub fn run() {
     });
 }
 ```
+
+### unwrap 与 expect
+
+unwrap 与 expect 都是用于处理错误的快捷 API，不同之处在于：unwrap 会直接 panic，而 expect 会返回一个自定义的错误信息，除此之外他俩没什么不同。
+
+### 使用 ？简化处理
+
+对于 Result 类型，我们可以使用 ？运算符简化处理，例如：
+
+```rust
+// Result类型简化
+fn read_file_content() -> Result<String, std::io::Error> {
+    let contents = std::fs::read_to_string("./test.txt")?;
+    Ok(contents)
+}
+// Option类型简化
+fn get_first_char(s: &str) -> Option<char> {
+    let first_char = s.chars().next()?; // 如果字符串为空，返回 None
+    Some(first_char)
+}
+```
