feat：泛型、Trait、生命周期

--- a/后端方向/Rust/12.错误处理.md
+++ b/后端方向/Rust/12.错误处理.md
@@ -77,9 +77,9 @@ pub fn run() {
 
 unwrap 与 expect 都是用于处理错误的快捷 API，不同之处在于：unwrap 会直接 panic，而 expect 会返回一个自定义的错误信息，除此之外他俩没什么不同。
 
-### 使用 ？简化处理
+### 使用 ？简化 Result、Option 的处理
 
-对于 Result 类型，我们可以使用 ？运算符简化处理，例如：
+对于 Result 类型，我们可以使用 ？运算符简化处理，将错误向上抛出，例如：
 
 ```rust
 // Result类型简化
