feat：配置调试；迭代器

--- a/后端方向/Rust/19.迭代器.md
+++ b/后端方向/Rust/19.迭代器.md
@@ -1,27 +1,37 @@
 ## 基础特性
 
-迭代器是惰性的(layzy)。这也就意味着创建迭代器 后，除非你主动调用方法来消耗并使用迭代器，否则它们不会产生任 何的实际效果
+**迭代器是惰性的(layzy)。这也就意味着创建迭代器 后，除非你主动调用方法来消耗并使用迭代器，否则它们不会产生任 何的实际效果。**
 
 ## 基础使用
 
 ```rust
+// 简单的迭代器使用
 let v1: Vec<i32> = vec![1, 2, 3];
-let v2: Vec<_> = v1.iter().map(|x| x + 1).collect(); 
+let v2: Vec<_> = v1.iter().map(|x| x + 1).collect();
 assert_eq!(v2, vec![2, 3, 4]);
 
 // 简单的自定义迭代器
-impl Iterator for Counter { 
-    type Item = u32;
-    fn next(&mut self) -> Option<Self::Item> { 
-        self.count += 1;
-        if self.count < 6 { 
-            Some(self.count)
-        } else { 
+struct Counter {
+    value: i32,
+}
+
+impl Counter {
+    fn new() -> Counter {
+        Counter { value: 0 }
+    }
+}
+
+impl Iterator for Counter {
+    type Item = i32;
+    fn next(&mut self) -> Option<i32> {
+        if self.value < 5 {
+            self.value += 1;
+            Some(self.value)
+        } else {
             None
         }
     }
 }
-
 ```
 
 ## 三种创建迭代器方法的区别
@@ -30,6 +40,65 @@ impl Iterator for Counter {
 - iter_mut：可变借用
 - into_iter：消费
 
-*Tips: for-in 循环语法糖使用的是 into_iter 方法，因此会消耗被迭代的变量*
+_Tips: for-in 循环语法糖使用的是 into_iter 方法，因此会消耗被迭代的变量_
 
-##
+## 迭代器典型应用场景
+
+下面的片段是对 CLI 测试项目中程序入参解析部分的重写，使用迭代器+Match 进行重写，可以看到比原来的实现更加紧凑且语义清晰。
+
+```rust
+impl Config {
+    pub fn new(args: Args) -> Result<Config, &'static str> {
+        if args.len() < 3 {
+            return Err("Not enough arguments");
+        }
+
+        let mut case_insensitive = env::var("CASE_INSENSITIVE").is_ok();
+        let mut query = String::new();
+        let mut filename = String::new();
+
+        // 对于for-in中的游标进行判断
+        for (index, arg) in args.enumerate() {
+            match index {
+                1 => query = arg,
+                2 => filename = arg,
+                _ => {
+                    if arg.contains(&"--case-insensitive".to_string()) {
+                        case_insensitive = true
+                    }
+                }
+            }
+        }
+
+        Result::Ok(Config {
+            query,
+            filename,
+            case_insensitive,
+        })
+    }
+}
+```
+
+另外一个配合闭包进行过滤的典型案例：
+
+```rust
+pub fn search<'a>(query: &str, contents: &'a str) -> Vec<&'a str> {
+    // 原先的实现，存在临时变量，不利于改写成多线程实现，如果for存在耗时操作，想要启用多线程并行处理的话
+    // 对于 target_lines 就存在数据竞争的问题
+    // let mut target_lines = Vec::new();
+
+    // for line in contents.lines() {
+    //     if line.contains(query) {
+    //         target_lines.push(line);
+    //     }
+    // }
+
+    // target_lines
+
+    // 使用迭代器+闭包进行过滤，没有临时变量，不存在数据竞争的问题，可以放心使用多线程并行处理
+    contents
+        .lines()
+        .filter(|line| line.contains(query))
+        .collect()
+}
+```
