--- a/后端方向/Rust/01.Cargo基础使用.md
+++ b/后端方向/Rust/01.Cargo基础使用.md
@@ -13,3 +13,9 @@
 使用命令升级依赖：`cargo update` 将会保障语义化版本的兼容性（升级 Minor）[版本规范（Semantic Versioning 2.0.0）](https://semver.org/)
 
 这个行为可以最大程度保证兼容性，如果你需要升级 Major 版本，则需要手动修改`Cargo.toml`配置文件中的依赖版本。
+
+## 扩展Cargo的子指令
+
+只要环境变量路径中存在类似这样的二进制命令：`cargo-something`，便可以通过执行：`cargo something`来执行对应的二进制文件。
+
+我们可以借助这个方式，在不修改Cargo本身的前提下完成对Cargo指令的能力扩展。
