feat：结构体、智能指针

--- a/后端方向/Rust/06.结构体.md
+++ b/后端方向/Rust/06.结构体.md
@@ -10,7 +10,7 @@ struct Person {
 创建结构体，并使用简化字段写法：
 
 ```rust
-fn build_user(email: String, username: String) -> User { 
+fn build_user(email: String, username: String) -> User {
     User {
         email,
         username,
@@ -24,8 +24,8 @@ fn build_user(email: String, username: String) -> User {
 
 ```rust
 let user2 = User {
-    email: String::("another@example.com"), 
-    username: String::from("anotherusername567"), 
+    email: String::("another@example.com"),
+    username: String::from("anotherusername567"),
     ..user1
 };
 ```
@@ -35,8 +35,14 @@ let user2 = User {
 ```rust
 struct Color(i32, i32, i32);
 struct Point(i32, i32, i32);
-let black = Color(0, 0, 0); 
+let black = Color(0, 0, 0);
 let origin = Point(0, 0, 0);
+// 泛型元组结构体
+struct Point<T>(T);
+struct Point<T, P>(T, P);
+// 访问元组结构体中的元素：
+let p = Point(1, 2, 3);
+println!("{:?} {:?} {:?}", p.0,p.1,p.2);
 ```
 
 ## 为结构体定义方法
