feat：智能指针对比

--- a/后端方向/Rust/23.智能指针.md
+++ b/后端方向/Rust/23.智能指针.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [Box<T> 在堆上分配数据](#boxt-%E5%9C%A8%E5%A0%86%E4%B8%8A%E5%88%86%E9%85%8D%E6%95%B0%E6%8D%AE)
 - [实现 Deref trait 来解引用](#%E5%AE%9E%E7%8E%B0-deref-trait-%E6%9D%A5%E8%A7%A3%E5%BC%95%E7%94%A8)
@@ -381,3 +382,65 @@ fn main() {
     println!("branch: {:#?}",branch);
 }
 ```
+
+## Rust 智能指针特性对比
+
+### 基本特性对比
+
+| 智能指针     | 可变性           | 所有权模式    | 线程安全             | 运行时开销         |
+| ------------ | ---------------- | ------------- | -------------------- | ------------------ |
+| `Box<T>`     | 跟随 T 的可变性  | 独占所有权    | 不安全(需 Send+Sync) | 几乎无开销         |
+| `Rc<T>`      | 不可变           | 共享所有权    | 不安全(单线程)       | 引用计数开销       |
+| `Arc<T>`     | 不可变           | 共享所有权    | 线程安全             | 原子引用计数开销   |
+| `RefCell<T>` | 运行时可变性检查 | 配合 Rc 使用  | 不安全(单线程)       | 运行时借用检查开销 |
+| `Mutex<T>`   | 互斥访问可变性   | 配合 Arc 使用 | 线程安全             | 锁同步开销         |
+| `RwLock<T>`  | 读写锁可变性     | 配合 Arc 使用 | 线程安全             | 读写锁开销         |
+
+### 内部可变性对比
+
+| 类型         | 可变性检查时机       | 多线程支持       | 性能特点       | 失败行为     |
+| ------------ | -------------------- | ---------------- | -------------- | ------------ |
+| `RefCell<T>` | 运行时               | 否               | 低开销         | panic!       |
+| `Cell<T>`    | 编译时(仅 Copy 类型) | 否               | 最低开销       | 编译错误     |
+| `Mutex<T>`   | 运行时               | 是               | 中等开销       | 阻塞等待     |
+| `RwLock<T>`  | 运行时               | 是               | 读多写少时优化 | 阻塞等待     |
+| `Ref<T>`     | 不可变借用           | RefCell 借用结果 | 不安全(单线程) | 借用检查开销 |
+| `RefMut<T>`  | 可变借用             | RefCell 借用结果 | 不安全(单线程) | 借用检查开销 |
+
+### 典型使用场景
+
+| 智能指针     | 主要使用场景             | 典型组合         | 示例用途             |
+| ------------ | ------------------------ | ---------------- | -------------------- |
+| `Box<T>`     | 堆分配、递归结构、大对象 | 单独使用         | 链表节点、trait 对象 |
+| `Rc<T>`      | 单线程共享数据           | `Rc<RefCell<T>>` | 图结构、回调函数     |
+| `Arc<T>`     | 多线程共享数据           | `Arc<Mutex<T>>`  | 多线程共享状态       |
+| `RefCell<T>` | 单线程内部可变性         | `Rc<RefCell<T>>` | 需要共享且可变的数据 |
+| `Mutex<T>`   | 多线程互斥访问           | `Arc<Mutex<T>>`  | 共享可变状态         |
+| `RwLock<T>`  | 多线程读写分离           | `Arc<RwLock<T>>` | 读多写少的共享数据   |
+
+### 选择指南
+
+#### 单线程场景
+
+- **仅需所有权转移**: `Box<T>`
+- **需要共享但不需修改**: `Rc<T>`
+- **需要共享且需修改**: `Rc<RefCell<T>>`
+
+#### 多线程场景
+
+- **需要共享但不需修改**: `Arc<T>`
+- **需要共享且需修改**: `Arc<Mutex<T>>` 或 `Arc<RwLock<T>>`
+- **读多写少**: 优先考虑 `Arc<RwLock<T>>`
+
+#### 性能考量
+
+- **零开销**: `Box<T>`
+- **最小运行时开销**: `Rc<T>` + `RefCell<T>`
+- **多线程最佳**: `Arc<T>` + `Mutex<T>` / `RwLock<T>`
+
+### 注意事项
+
+1. **循环引用**: `Rc<T>` 和 `Arc<T>` 可能造成内存泄漏，使用 `Weak<T>` 解决
+2. **死锁**: `Mutex<T>` 和 `RwLock<T>` 需要注意锁的获取顺序
+3. **性能权衡**: 线程安全通常意味着更高的性能开销
+4. **编译时 vs 运行时**: 优先使用编译时检查，必要时才使用运行时检查
