--- a/后端方向/Rust/25.面向对象编程.md
+++ b/后端方向/Rust/25.面向对象编程.md
@@ -77,6 +77,8 @@ fn main() {
 }
 ```
 
+另外一个例子工程：`test-log`以及`test-log-better`，更加复杂的 Trait 对象使用
+
 ## Trait 对象必须保证对象安全
 
 满足下述两个规则的 Trait 才可以转换为 Trait 对象：
