--- a/后端方向/Rust/18.闭包.md
+++ b/后端方向/Rust/18.闭包.md
@@ -1,10 +1,11 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [基础定义与使用](#%E5%9F%BA%E7%A1%80%E5%AE%9A%E4%B9%89%E4%B8%8E%E4%BD%BF%E7%94%A8)
-- [捕获环境](#%E6%8D%95%E8%8E%B7%E7%8E%AF%E5%A2%83)
-  - [Trait 类型验证实例](#trait-%E7%B1%BB%E5%9E%8B%E9%AA%8C%E8%AF%81%E5%AE%9E%E4%BE%8B)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [基础定义与使用](#基础定义与使用)
+- [捕获环境](#捕获环境)
+  - [Trait 类型验证实例](#trait-类型验证实例)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
