--- a/后端方向/Rust/23.智能指针.md
+++ b/后端方向/Rust/23.智能指针.md
@@ -88,6 +88,18 @@ fn hello(msg: &str) {
 }
 ```
 
+上面代码中，我们为 MyBox 类型实现了 Deref Trait，使得 &MyBox 可以自动强制转换 &str 类型，从而可以适用在需要 &str 类型的场景。
+
+另外一个需要注意的是，如果在 MyBox 上调用方法，也会触发类似的流程，比如：
+
+```rust
+let msg = MyBox::new(String::from("Alice"));
+// 此处会触发Deref Trait的自动解引用进行强制类型转换，最终调用String的len方法
+println!("len: {}", msg.len());
+```
+
+_Tips：书中的术语“自动解引用”，对于有`C/C++/Java`背景的读者来说，可能比较难以理解，明明`msg`是实例，并不是引用类型，为什么可以“自动解引用”？实际上，更贴切的描述是“自动强制类型转换”，对于方法调用则更像是“方法委托”或“透明代理”。_
+
 ## 引用转换规则
 
 - 当 `T: Deref<Target = U>` 时，允许 `&T` 隐式转换为 `&U`
