--- a/后端方向/Rust/30.宏.md
+++ b/后端方向/Rust/30.宏.md
@@ -2,6 +2,12 @@
 
 - 声明宏（Declarative Macros）：macro_rules!
 - 过程宏（Procedural Macros）：
-  - 用于结构体或枚举的自定义#[derive]宏，它可以指定随 derive 属性自动添加的代码
-  - 用于为任意条目添加自定义属性的属性宏
-  - 看起来类似于函数的函数宏，它可以接收并处理一段标记（token）序列
+  - 自定义派生宏：用于结构体或枚举的自定义#[derive]宏，它可以指定随 derive 属性自动添加的代码
+  - 属性宏：用于为任意条目添加自定义属性
+  - 函数宏：看起来类似于函数的函数宏，它可以接收并处理一段标记（token）序列
+
+宏的定义需要与语法标记树以及抽象语法树打交道，较为复杂，需要单独学习（[The Little Book of Rust Macros](https://zjp-cn.github.io/tlborm/introduction.html)）
+
+理解 AST 与 标记树 (token tree) 之间的区别至关重要。 写宏时，你将同时与这两者打交道。
+
+Tips：Rust 来发中，更多时候是使用宏，而非编写宏。初学 Rust 不在此部分投入过多学习精力，真正需要深入宏定义时再细致学习 AST 以及语法标记树相关内容。
