feat：热更新、自动重启

--- a/后端方向/Rust/31.附加的边边角角.md
+++ b/后端方向/Rust/31.附加的边边角角.md
@@ -12,3 +12,95 @@ fn main() {
     assert!(r#match("foo", "foobar"));
 }
 ```
+
+## 热更新
+
+### 简单热更新
+
+```shell
+# 安装 cargo-watch
+cargo install cargo-watch
+
+# 启动项目
+cargo watch -x run
+# 清屏后运行
+cargo watch -c -x run
+# 只监听特定文件类型
+cargo watch -w src -x run
+# 延迟执行（避免频繁重启）
+cargo watch -d 1 -x run
+```
+
+### 端口复用热更新
+
+1、安装 CLI
+
+```shell
+# 安装工具
+cargo install systemfd cargo-watch
+```
+
+2、修改代码适配热更新
+
+```rust
+use anyhow::Ok;
+use axum::{Router, routing};
+use listenfd::ListenFd;
+use tokio::net::TcpListener;
+
+#[tokio::main]
+async fn main() -> anyhow::Result<()> {
+    let app: Router<_> = Router::new().route("/", routing::get(home));
+    let app = app.route("/users", routing::get(users));
+
+    // ========================== 引入适配热更新的代码 ==========================
+    let mut listenfd = ListenFd::from_env();
+    let listener = match listenfd.take_tcp_listener(0)? {
+        Some(listener) => {
+            listener.set_nonblocking(true)?;
+            TcpListener::from_std(listener)?
+        }
+        None => TcpListener::bind("127.0.0.1:8080").await?,
+    };
+    // ========================== 引入适配热更新的代码 ==========================
+
+    axum::serve(listener, app.into_make_service()).await?;
+
+    Ok(())
+}
+
+async fn home() -> &'static str {
+    "Hello, Axum ! Hot Replace.   12332sad"
+}
+async fn users() -> &'static str {
+    "Users"
+}
+
+```
+
+Cargo.toml:
+
+```toml
+[package]
+name = "hello-axum"
+version = "0.1.0"
+edition = "2024"
+
+[dependencies]
+# "?" is shorter than ".unwrap()"
+anyhow = "1.0"
+# full features because of laziness
+tokio = { version = "1.46", features = ["full"] }
+# import the greatest framework - updated to latest version
+axum = "0.8"
+# 热更新插件
+listenfd = "1.0"
+
+```
+
+3、启动项目
+
+```shell
+# 启动项目
+systemfd --no-pid -s http::8080 -- cargo watch -x run
+```
