feat：异步编程基础

--- a/后端方向/Rust/Rust异步编程/01.异步基础.md
+++ b/后端方向/Rust/Rust异步编程/01.异步基础.md
@@ -116,3 +116,34 @@ fn main() {
    ```
 
    此时，Main 函数就可以调用异步函数了，而不在需要手动调用 `block_on` 去执行异步任务了。
+
+### 同时运行多个任务
+
+```rust
+use std::time::Duration;
+use tokio::{spawn, time::sleep};
+
+// 多线程模式
+// #[tokio::main(flavor = "multi_thread")]
+// 单线程模式
+// #[tokio::main(flavor = "current_thread")]
+async fn main() {
+    let handle1 = spawn(say_hello());
+    let handle2 = spawn(say_hi());
+
+    let _ = tokio::join!(handle1, handle2);
+    println!("main end");
+}
+
+async fn say_hello() {
+    // 如果使用线程阻塞休眠，并且Tokio使用单线程模式的话，这里将会导致整个调度器休眠，其他并发任务在休眠期间将无法得到调度
+    // 如果使用Tokio的异步休眠，则不会导致整个调度器休眠，其他并发任务在休眠期间将可以得到调度
+    // std::thread::sleep(Duration::from_secs(2));
+    sleep(Duration::from_secs(2)).await;
+    println!("Hello, world!");
+}
+
+async fn say_hi() {
+    println!("Hi, world!");
+}
+```
