--- a/后端方向/Rust/Rust基础/09.通用集合类型.md
+++ b/后端方向/Rust/Rust基础/09.通用集合类型.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [动态数组](#%E5%8A%A8%E6%80%81%E6%95%B0%E7%BB%84)
   - [常用方法](#%E5%B8%B8%E7%94%A8%E6%96%B9%E6%B3%95)
@@ -60,6 +61,7 @@ println!("{:?}", v); // 输出: [1, 2]
 - `clear()`：清空
 - `insert(index, value)`：在指定位置插入元素
 - `remove(index)`：删除指定位置的元素
+- `std::array::from_fn`：从函数生成固定长度数组，对于生成固定长度的数组非常方便（`let array: [String; 8] = std::array::from_fn(|_i| String::from("rust is good!"));`）
 
 ## 在 Vec 中存储不同类型的值
 
