--- a/后端方向/Rust/Rust基础/14.Trait(接口).md
+++ b/后端方向/Rust/Rust基础/14.Trait(接口).md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [基础定义](#%E5%9F%BA%E7%A1%80%E5%AE%9A%E4%B9%89)
 - [定义 Trait 默认实现](#%E5%AE%9A%E4%B9%89-trait-%E9%BB%98%E8%AE%A4%E5%AE%9E%E7%8E%B0)
@@ -239,6 +240,65 @@ impl<T: Display + PartialOrd> Pair<T> {
         } else {
             println!("The largest member is y = {}", self.y);
         }
+    }
+}
+```
+
+## Trait 对象（特征对象）
+
+如果需要在函数返回值中返回实现了 Trait 的多个不同类型，那么可以使用 Trait 对象来实现：
+
+```rust
+fn returns_summarizable() -> impl Summary {
+  if 条件1 {
+    Box::new(Type1{}) // 返回实现了Summary Trait的Type1类型
+  } else {
+    Box::new(Type2{}) // 返回实现了Summary Trait的Type2类型
+  }
+}
+```
+
+另外需要考虑的还有：`Box<dyn Trait>` 与 `&dyn Trait` 的区别，前者是动态分配内存，后者是创建引用：
+
+```rust
+// Trait 对象
+fn draw1(x: Box<dyn Draw>) {
+    x.draw();
+}
+// Trait 引用
+fn draw2(x: &dyn Draw) {
+    x.draw();
+}
+```
+
+对于这两种使用遵循的规则如下：
+
+1. 首选 `&dyn Trait`，零开销抽象，适用于大部分场景，性能好
+2. 需要所有权转移时，使用 `Box<dyn Trait>`，比如存储、返回、跨线程传递
+
+### Trait 对象限制
+
+创建 Trait 对象，要求如下：
+
+1. Trait 方法的返回类型不能是 Self
+2. Trait 方法不能有泛型参数
+
+满足上述要求，则可以创建 Trait 对象。原因是，有了 Trait 特征对象，则不再需要具体类型，也就是在运行时，Trait 对象抹去了具体类型。当应用于场景一时，由于不知道自己是什么类型，那么方法返回的`Self`也就无法确定。对于场景二，调用方法时由于需要泛型参数，同样由于类型遗忘的问题，无法为泛型参数提供具体的泛型类型，同样会造成失败。
+
+## self 与 Self
+
+`self` 指代的就是当前的实例对象，也就是 button.draw() 中的 button 实例，`Self` 则指代的是 Button 类型。
+
+```rust
+trait Draw {
+    fn draw(&self) -> Self;
+}
+
+#[derive(Clone)]
+struct Button;
+impl Draw for Button {
+    fn draw(&self) -> Self {
+        return self.clone()
     }
 }
 ```
