--- a/后端方向/Rust/Rust基础/15.生命周期.md
+++ b/后端方向/Rust/Rust基础/15.生命周期.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [生命周期标注语法](#%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E6%A0%87%E6%B3%A8%E8%AF%AD%E6%B3%95)
 - [基础示例](#%E5%9F%BA%E7%A1%80%E7%A4%BA%E4%BE%8B)
@@ -33,6 +34,8 @@ pub fn get_max_str<'a>(left: &'a str, right: &'a str) -> &'a str {
 ```
 
 这段代码的函数签名向 Rust 表明，函数所获取的两个字符串切片参数的存活时间，必须不短于给定的生命周期'a。这个函数签名同时也意味着，从这个函数返回的字符串切片也可以获得不短于'a 的生命周期。
+
+_Tips：生命周期约束与泛型约束在语法位置上非常相似，但是作用不同。_
 
 ## 概念与省略规则
 
@@ -75,6 +78,24 @@ impl<'a> ImportantExcerpt<'a> {
 }
 
 ```
+
+## 生命周期子类型约束
+
+当多个生命周期存在相互之间的约束关系时，可以使用生命周期子类型约束来解决：
+
+```rust
+// 'b: 'a 表示 'b 的生命周期至少与 'a 一样长
+fn choose_first<'a, 'b: 'a>(first: &'a str, _second: &'b str) -> &'a str {
+    first
+}
+
+// 's: 'c 表示 's 的生命周期至少与 'c 一样长
+struct Parser<'c, 's: 'c> {
+    context: &'c Context<'s>, // 内部引用的Context引用存活时间不能比结构体的存活时间短，否则会造成悬垂引用
+}
+```
+
+`'a: 'b`: 表示 `'a` 的生命周期至少与 `'b` 一样长，因此可以借助这个语法机制来声明两个不同生命周的生命周期之前的关系。
 
 ## 静态生命周期
 
