--- a/后端方向/Rust/Rust基础/26.模式匹配.md
+++ b/后端方向/Rust/Rust基础/26.模式匹配.md
@@ -263,4 +263,65 @@ match msg {
         println!("Found some other id: {}", id)
     }
 }
+
+// @前绑定后解构(Rust 1.56 新增)
+let p @ Point {x: px, y: py } = Point {x: 10, y: 23};
+println!("x: {}, y: {}", px, py);
+println!("{:?}", p);
+
+// 多重模式匹配组合重绑定（Rust 1.53 新增）
+fn main() {
+    match 1 {
+        num @ (1 | 2) => {
+            println!("{}", num);
+        }
+        _ => {}
+    }
+}
 ```
+
+## 使用 matches! 宏
+
+Tips: `matches!` 不会转移所有权，也不会进行解构，只会进行模式匹配，搭配模式匹配守卫，可以方便的视线过滤、判断等功能。
+
+```rust
+#[derive(Debug)]
+enum MyEnum {
+    Foo,
+    Bar,
+}
+
+fn main() {
+  let v = vec![MyEnum::Foo, MyEnum::Bar, MyEnum::Foo];
+
+  let res = v
+      .iter()
+      // 这样写略显麻烦，可以用matches!宏来简化
+      // .filter(|x| match x {
+      //     MyEnum::Foo => true,
+      //     MyEnum::Bar => false,
+      // })
+      .filter(|x| matches!(x, MyEnum::Foo))
+      .collect::<Vec<_>>();
+
+  println!("{:?}", res);
+}
+```
+
+## 新语法 let-else
+
+```rust
+let 模式 = 表达式 else {
+    // 当模式匹配失败时执行的代码
+    // 这个代码块必须发散（diverge），即不能正常返回
+};
+```
+
+关键要求：else 块必须是发散的（diverging），意味着它必须通过以下方式之一结束：
+
+- return
+- panic!
+- break
+- continue
+- std::process::exit()
+- 调用其他发散函数
