--- a/后端方向/Rust/Rust基础/28.高级Trait.md
+++ b/后端方向/Rust/Rust基础/28.高级Trait.md
@@ -22,6 +22,17 @@ impl Iterator for Counter {
 
 因为如果使用泛型设计，那么对于同一个类型的不同的泛型参数，可以实现相同的 trait，那么在执行迭代器时也需要明确指定泛型类型，这会导致代码的复杂性增加，易用性降低。
 
+另外，关联类型还可以被其他特征进行约束：
+
+```rust
+trait Container{
+    type A：Display;
+    type B;
+    fn contains(&self, a: &Self::A, b: &Self::B) -> bool;
+}
+
+```
+
 ### 默认泛型与运算符重载
 
 ```rust
