feat：Rust基础部分补遗

--- a/后端方向/Rust/Rust基础/03.print使用.md
+++ b/后端方向/Rust/Rust基础/03.print使用.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [Print 宏的使用](#print-%E5%AE%8F%E7%9A%84%E4%BD%BF%E7%94%A8)
   - [概述](#%E6%A6%82%E8%BF%B0)
@@ -141,6 +142,8 @@ fn main() {
 
 ### 命名参数
 
+需要注意的是：带名称的参数必须放在不带名称参数的后面。
+
 ```rust
 fn main() {
     println!("{name} 今年 {age} 岁", name="张三", age=25);
@@ -191,11 +194,20 @@ fn main() {
     // 指定小数位数
     println!("两位小数: {:.2}", pi);
 
+    // 通过参数来设定精度 => 3.1416，相当于{:.4}
+    println!("{:.1$}", v, 4);
+
     // 科学记数法
     println!("科学记数法: {:e}", pi);
 
     // 科学记数法（大写E）
     println!("科学记数法: {:E}", pi);
+
+    // 保留字符串前三个字符 => hi我
+    println!("{:.3}", "hi我是Sunface孙飞");
+
+    // {:.*}接收两个参数，第一个是精度，第二个是被格式化的值 => Hello abc!
+    println!("Hello {:.*}!", 3, "abcdefg");
 }
 ```
 
@@ -453,16 +465,14 @@ fn main() {
 }
 ```
 
-## 总结
+## 新特性（1.58 版本之后）
 
-Rust 的打印宏功能强大且灵活，支持各种格式化选项：
+在可以使用格式化字符串的宏中，如果需要使用变量嵌入，可以直接使用变量名进行嵌入了：
 
-- `println!` 和 `print!` 用于标准输出
-- `eprintln!` 和 `eprint!` 用于错误输出
-- `format!` 用于创建格式化字符串
-- 支持位置参数、命名参数和各种格式化选项
-- 提供调试输出 `{:?}` 和美化输出 `{:#?}`
-- 支持数值的各种进制表示
-- 提供对齐、填充等高级格式化功能
-
-掌握这些宏的使用，能够大大提高 Rust 开发的效率和代码的可读性。
+```rust
+let name = "Sunface";
+// 先前的格式化写法
+println!("Hello, {}!", name);
+// 新的格式化写法
+println!("Hello, {name}!");
+```
