--- a/后端方向/Rust/Rust基础/08.包与模块.md
+++ b/后端方向/Rust/Rust基础/08.包与模块.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [关于包的约定](#%E5%85%B3%E4%BA%8E%E5%8C%85%E7%9A%84%E7%BA%A6%E5%AE%9A)
 - [可见性](#%E5%8F%AF%E8%A7%81%E6%80%A7)
@@ -213,11 +214,37 @@ mod system_conf {
 
 模块定义支持嵌套定义，但是需要注意模块的可见性，文件（模块）内的可见性不代表模块的可见性，模块是否可见需要在`mod.rs`中进行声明。
 
-如果模块的可见性不需要被外部访问，则可以使用`pub(crate)`来声明模块的可见性为当前包内可见，如果编写的模块仅用于当前项目，且希望获得一个扁平化的引用路径，则推荐使用这个声明，但是会使得引用结构脱离文件结构，需要审慎。
-
 `mod.rs`文件必须对模块进行声明，但是可以不对模块进行公开，如果希望外部能够访问，则必须在`mod.rs`文件中进行公开。
 
 ```rust
 // mod.rs
 pub mod module_name;
 ```
+
+### 新的模块声明模式
+
+在 Rust 1.30 版本之后，更推荐采用新的模块声明方式进行模块声明，文件结构将如下所示：
+
+```
+src
+├── front_of_house
+│   └── hosting.rs
+├── front_of_house.rs
+└── lib.rs
+```
+
+在 front_of_house 同级目录里创建一个与模块（目录）同名的 rs 文件 front_of_house.rs，然后在该文件中声明模块：
+
+```rust
+pub mod hosting;
+```
+
+### 限制可见性语法
+
+对于可见性限制语法，有如下规则：
+
+- pub 意味着可见性无任何限制
+- pub(crate) 表示在当前包可见
+- pub(self) 在当前模块可见
+- pub(super) 在父模块可见
+- pub(in <path>) 表示在某个路径代表的模块中可见，其中 path 必须是父模块或者祖先模块
