--- a/后端方向/Rust/Rust基础/21.文档注释与重导出.md
+++ b/后端方向/Rust/Rust基础/21.文档注释与重导出.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [文档注释](#%E6%96%87%E6%A1%A3%E6%B3%A8%E9%87%8A)
   - [文档注释分区](#%E6%96%87%E6%A1%A3%E6%B3%A8%E9%87%8A%E5%88%86%E5%8C%BA)
@@ -101,4 +102,42 @@ pub use self::sub_module::other_sub_modules::search;
 
 // 使用时可以屏蔽内层的结构
 use test_module::search;
+```
+
+## 文档中的代码跳转
+
+下面文档中的`Option` 类型，在文档中会自动跳转到 `Option` 类型的文档中，IDE 则可以通过按住 Ctrl+点击进行跳转
+
+```rust
+/// `add_one` 返回一个[`Option`]类型
+pub fn add_one(x: i32) -> Option<i32> {
+    Some(x + 1)
+}
+```
+
+除了跳转到标准库，你还可以通过指定具体的路径跳转到自己代码或者其它库的指定项，例如在 lib.rs 中添加以下代码：
+
+```rust
+pub mod a {
+    /// `add_one` 返回一个[`Option`]类型
+    /// 跳转到[`crate::MySpecialFormatter`]
+    pub fn add_one(x: i32) -> Option<i32> {
+        Some(x + 1)
+    }
+}
+
+pub struct MySpecialFormatter;
+```
+
+## 文档搜索别名
+
+Rust 文档支持搜索功能，我们可以为自己的类型定义几个别名，以实现更好的搜索展现，当别名命中时，搜索结果会被放在第一位：
+
+```rust
+#[doc(alias = "x")] // 别名 x
+#[doc(alias = "big")] // 别名 big
+pub struct BigX;
+
+#[doc(alias("y", "big"))] // 别名 y 和 big
+pub struct BigY;
 ```
