feat：Rust进阶部分（深入生命周期）

--- a/后端方向/Rust/Rust基础/13.泛型.md
+++ b/后端方向/Rust/Rust基础/13.泛型.md
@@ -114,3 +114,30 @@ fn main() {
     println!("Buffer size: {} bytes", buffer.data.len());
 }
 ```
+
+## 默认的 Sized Trait
+
+函数的泛型实现默认增加了一个泛型约束：`Sized`，表示该泛型类型的大小是已知的，这是编译器的默认行为：
+
+```rust
+fn generic<T>(t: T) {
+    // --snip--
+}
+// 实际上等价于
+fn generic<T: Sized>(t: T) {
+    // --snip--
+}
+```
+
+可以用特殊语法来放款这个限制：
+
+```rust
+fn generic<T: ?Sized>(t: &T) {
+    // --snip--
+}
+
+```
+
+`?Sized` trait bound 与 `Sized` 相对；也就是说，它可以读作 “T 可能是也可能不是 Sized 的”。这个语法只能用于 Sized ，而不能用于其他 trait。
+
+另外注意我们将 t 参数的类型从 T 变为了 &T：因为其类型可能不是 Sized 的，所以需要将其置于某种指针之后。在这个例子中选择了引用。因为函数参数使用栈进行传递，必须是可以 Sized 的，所以需要使用引用。
