feat：自定义迭代器实现

--- a/后端方向/Rust/Rust进阶/02.闭包与迭代器.md
+++ b/后端方向/Rust/Rust进阶/02.闭包与迭代器.md
@@ -163,5 +163,142 @@ fn main() {
 根据上面对应的三种迭代器，我们可以为自定义类型分别实现三种迭代器特性：
 
 ```rust
-// TODO 有点儿难...写好了再补上来
+// lib.rs
+pub mod net_lib {
+    #[derive(Debug)]
+    pub struct NetState {
+        pub is_connected: bool,
+        pub link_address: Vec<String>,
+    }
+
+    impl NetState {
+        // 获取：不可变借用迭代器
+        pub fn iter(&self) -> NetIter {
+            self.into_iter()
+        }
+
+        // 获取：可变借用迭代器
+        pub fn iter_mut(&mut self) -> NetMutIter {
+            self.into_iter()
+        }
+
+        // 获取：消耗迭代器
+        // into_iter 方法使用 IntoIterator Trait 实现，因此可以实现消耗迭代器
+        // fn into_iter(self) -> IntoNetIter;
+    }
+
+    //  ======================================= 消耗迭代器 =======================================
+    pub struct IntoNetIter {
+        pub remaining: Vec<String>,
+    }
+
+    // 实现迭代器 Trait
+    impl Iterator for IntoNetIter {
+        type Item = String;
+
+        fn next(&mut self) -> Option<Self::Item> {
+            self.remaining.pop()
+        }
+    }
+    // 实现 IntoIterator 接口，适配 for 语法糖
+    impl IntoIterator for NetState {
+        type Item = String;
+        type IntoIter = IntoNetIter;
+        // 此处 self 类型是 NetState，因此调用into_iter时会出现所有权转移（消耗掉上下文对象）
+        fn into_iter(self) -> Self::IntoIter {
+            IntoNetIter {
+                remaining: self.link_address.into_iter().rev().collect(),
+            }
+        }
+    }
+
+    //  ======================================= 可变借用迭代器 =======================================
+    pub struct NetMutIter<'a> {
+        pub remaining: &'a mut [String],
+    }
+    // 实现迭代器 Trait
+    impl<'a> Iterator for NetMutIter<'a> {
+        type Item = &'a mut String;
+        fn next(&mut self) -> Option<Self::Item> {
+            if self.remaining.is_empty() {
+                None
+            } else {
+                let all_slice = std::mem::take(&mut self.remaining);
+                let (first, rest) = all_slice.split_first_mut()?;
+                self.remaining = rest;
+                Some(first)
+            }
+        }
+    }
+    // 使用IntoIterator 接口，适配 for 语法糖
+    impl<'a> IntoIterator for &'a mut NetState {
+        type Item = &'a mut String;
+        type IntoIter = NetMutIter<'a>;
+        // 此处 self 类型是 &'a mut NetState，因此调用into_iter时不会出现所有权转移（不消耗掉上下文对象）
+        fn into_iter(self) -> Self::IntoIter {
+            NetMutIter {
+                remaining: &mut self.link_address[..],
+            }
+        }
+    }
+
+    //  ======================================= 借用迭代器 =======================================
+    pub struct NetIter<'a> {
+        pub remaining: &'a [String],
+    }
+    // 实现迭代器
+    impl<'a> Iterator for NetIter<'a> {
+        type Item = &'a String;
+
+        fn next(&mut self) -> Option<Self::Item> {
+            if self.remaining.is_empty() {
+                None
+            } else {
+                let all_slice = std::mem::take(&mut self.remaining);
+                let (first, rest) = all_slice.split_first()?;
+                self.remaining = rest;
+                Some(first)
+            }
+        }
+    }
+    // 实现IntoIterator接口，适配for语法糖
+    impl<'a> IntoIterator for &'a NetState {
+        type Item = &'a String;
+        type IntoIter = NetIter<'a>;
+
+        fn into_iter(self) -> Self::IntoIter {
+            NetIter {
+                remaining: &self.link_address[..],
+            }
+        }
+    }
+}
+
+// main.rs
+use test_base_1::net_lib;
+
+fn main() {
+    let mut connect_info = net_lib::NetState {
+        is_connected: true,
+        link_address: vec!["192.168.1.1".to_string(), "192.168.1.2".to_string()],
+    };
+
+    for addr in connect_info.iter() {
+        println!("不可变借用迭代 -> {addr}");
+    }
+
+    for addr in connect_info.iter_mut() {
+        *addr = format!("{addr} modified");
+        println!("可变借用迭代 -> {addr}");
+    }
+
+    println!("{connect_info:#?}");
+
+    for addr in connect_info.into_iter() {
+        println!("消耗迭代 -> {addr}");
+    }
+
+    // 编译错误，因为 connect_info 的所有权已经被消耗掉了
+    // println!("{connect_info:#?}");
+}
 ```
