feat：Rust进阶-深入类型 newtype与类型别名

--- a/后端方向/Rust/Rust基础/06.结构体.md
+++ b/后端方向/Rust/Rust基础/06.结构体.md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [结构体定义](#%E7%BB%93%E6%9E%84%E4%BD%93%E5%AE%9A%E4%B9%89)
 - [元组结构体](#%E5%85%83%E7%BB%84%E7%BB%93%E6%9E%84%E4%BD%93)
@@ -54,6 +55,15 @@ struct Point<T, P>(T, P);
 // 访问元组结构体中的元素：
 let p = Point(1, 2, 3);
 println!("{:?} {:?} {:?}", p.0,p.1,p.2);
+```
+
+Tips: 元组结构体的成员，可见性默认也是私有，如果想对外公开需要手动标注
+
+```rust
+// 私有
+struct Wrapper(Vec<String>);
+// 公开
+struct Wrapper(pub i32,pub String);
 ```
 
 ## 为结构体定义方法
