feat：Rust进阶知识补遗

--- a/后端方向/Rust/Rust基础/13.泛型.md
+++ b/后端方向/Rust/Rust基础/13.泛型.md
@@ -18,6 +18,7 @@ struct Point<T> {
 
 // 为所有泛型类型实现方法
 impl<T> Point<T> {
+    // 重点：&self 实际上是 self: &Self
     fn x(&self) -> &T {
         &self.x // 返回x的引用
     }
