--- a/后端方向/Rust/Rust基础/14.Trait(接口).md
+++ b/后端方向/Rust/Rust基础/14.Trait(接口).md
@@ -17,6 +17,8 @@
 
 ## 基础定义
 
+**重点：&self 实际上是 self: &Self**
+
 ```rust
 // 数据结构
 pub struct NewsArticle {
@@ -28,6 +30,7 @@ pub struct NewsArticle {
 
 // 定义行为
 pub trait Summary {
+  // &self 实际上是 self: &Self，如果不理解这一点，会造成非常大的理解误会
   fn summarize(&self) -> String;
 }
 
